--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
 # Test binary, built with `go test -c`
 *.test
 
@@ -19,5 +12,7 @@ tmp/
 
 # Protobuf Generated code
 *.pb.go
-certs/
-scratch.go
+
+# Ignore all node_modules
+node_modules/
+package-lock.json
