--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage/
 
 # Ignored directories (remove the comment below to include it)
 vendor/
 .idea/
+build/
 bin/
 tmp/
 
@@ -16,3 +18,18 @@ tmp/
 # Ignore all node_modules
 node_modules/
 package-lock.json
+
+# dependencies
+/.pnp
+.pnp.js
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
