Implemented support for Audio commands
* Added AudioRecorder component
* Implemented speech-to-text conversion
* Updated the UI

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,16 @@
 *.out
 coverage/
 
-# Ignored directories (remove the comment below to include it)
+# Build and output directories
 vendor/
 .idea/
 build/
 bin/
 tmp/
+dist/
+
+# Staging folder for code suggestions from Majordomo
+staging/
 
 # Protobuf Generated code
 *.pb.go
