--- a/testdata/test_config.yaml
+++ b/testdata/test_config.yaml
@@ -2,3 +2,12 @@
 api_key: test-key
 scenarios: test/scenarios.yaml
 code_snippets: code/snippets
+
+projects:
+  - name: test-project
+    location: test/location
+    description: test-description
+
+  - name: test-project-2
+    location: test/location-2
+    description: test-description-2
