--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Build & Test
 
 on:
   push:
@@ -22,7 +22,10 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go build -v ./cmd/main.go
+      run: make build
+
+    - name: Install Ginko
+      run: go get github.com/onsi/ginkgo/ginkgo
 
     - name: Test
-      run: go test -v ./pkg/...
+      run: make test
