--- a/settings.yaml
+++ b/settings.yaml
@@ -1,11 +1,11 @@
-# Copyright (c) 2023 AlertAvert.com
+# Copyright (c) 2023-2024 AlertAvert.com
 # All rights reserved.
 # Created by Marco Massenzio, 2023-07-13
 #
 # This script is used to generate a new release of the project.
 
 name: Majordomo
-version: v0.3.0
+version: v0.3.1
 description: An LLM-powered code-generation assistant for expert developers
 author: Marco Massenzio (marco@alertavert.com)
 license: Proprietary
