--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Test Majordomo
 
 on:
   push:
@@ -16,13 +16,16 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - name: Use Go 1.21
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.19
+        go-version: "1.21"
 
-    - name: Build
-      run: go build -v ./cmd/main.go
+    - name: Use Node.js v20
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
 
-    - name: Test
-      run: go test -v ./pkg/...
+    - run: go get github.com/onsi/ginkgo/ginkgo
+    - run: make ui-setup
+    - run: go test ./pkg/...
