--- a/ui/app/package.json
+++ b/ui/app/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "@babel/plugin-transform-private-property-in-object": "^7.16.7"
+    "@babel/plugin-transform-private-property-in-object": "^7.16.7",
+    "winston": "^3.11.0",
+    "dotenv": "^16.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
