--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,8 +8,8 @@ metadata:
   name: majordomo
   title: 'AI Coding Assistant'
   description: |
-    [Majordomo](http://github.com/alertavert/majordomo)
-    is an LLM-based coding assistant that enables the user to build
+    Backend server for [Majordomo](http://github.com/alertavert/majordomo),
+    an LLM-based coding assistant that enables the user to build
     applications using the power of AI in code generation.
   links:
     - url: https://github.com/alertavert/majordomo
