Increased test coverage for completions package to >60%

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 coverage/
+testdata/code/
 
 # Build and output directories
 vendor/
