--- a/testdata/test_config.yaml
+++ b/testdata/test_config.yaml
@@ -11,3 +11,8 @@ projects:
   - name: test-project-2
     location: test/location-2
     description: test-description-2
+
+  - name: actual
+    # Here the location is relative to the package folder of the running tests
+    location: ../../testdata/actual
+    description: This project is inside the testdata directory
