Added ThreadStore for local storage of Conversation threads

--- a/testdata/test_config.yaml
+++ b/testdata/test_config.yaml
@@ -1,7 +1,7 @@
 # Test data for test_config.yaml
 api_key: test-key
 assistants: test/assistants.yaml
-code_snippets: code/snippets
+code_snippets: .majordomo
 
 projects:
   - name: test-project
