--- a/testdata/test_config_projects.yaml
+++ b/testdata/test_config_projects.yaml
@@ -1,7 +1,7 @@
 # Test data for test_config.yaml
 api_key: test-key
 scenarios: test/scenarios.yaml
-code_snippets: code/snippets
+code_snippets: .majordomo
 
 projects:
   - name: test-project
