--- a/settings.yaml
+++ b/settings.yaml
@@ -2,8 +2,8 @@
 # All rights reserved.
 # Created by Marco Massenzio, 2023-07-13
 
-name: Majordomo
-version: 0.6.0
+name: majordomo
+version: 0.6.1
 description: An LLM-powered code-generation assistant for expert developers
 author: Marco Massenzio (marco@alertavert.com)
 license: Proprietary
